--- a/01시작.md
+++ b/01시작.md
@@ -1,3 +1,10 @@
 
-1st 설치
+1st. 시작
 =============
+
+# 1. 설치
+1. 우분투 열기<br><br>
+2. 아래 명령어 입력<br>
+   <pre><code>curl https://sh.rustup.rs -sSf | sh</code></pre><br>
+3. "1" 입력<br>
+   <img src="https://github.com/redzzzi/rust23summer/assets/127263392/7170cb69-6ede-4e24-abd9-8cde115199f2" width="300px"><br>
