--- a/01시작.md
+++ b/01시작.md
@@ -1,4 +1,3 @@
-
 1st. 시작
 =============
 
@@ -7,4 +6,14 @@
 2. 아래 명령어 입력<br>
    <pre><code>curl https://sh.rustup.rs -sSf | sh</code></pre><br>
 3. "1" 입력<br>
-   <img src="https://github.com/redzzzi/rust23summer/assets/127263392/7170cb69-6ede-4e24-abd9-8cde115199f2" width="300px"><br>
+   <img src="https://github.com/redzzzi/rust23summer/assets/127263392/7170cb69-6ede-4e24-abd9-8cde115199f2" width="300px"><br><br>
+4. 설치 성공 ‼️<br>
+   <pre>Rust is installed now. Great!</pre><br>
+\+ 러스트를 시스템 패스에 추가
+   <pre><code>source $HOME/.cargo/env</code></pre>
+\+ 최신 버전으로 업데이트
+   <pre><code>rustup update</code></pre>
+\+ 러스트와 rustup 제거
+   <pre><code>rustup self uninstall</code></pre>
+\+ 버전 확인
+   <pre><code>rustc --version</code></pre>
