--- a/01시작.md
+++ b/01시작.md
@@ -17,3 +17,5 @@
    <pre><code>rustup self uninstall</code></pre>
 \+ 버전 확인
    <pre><code>rustc --version</code></pre>
+   
+# 2. 첫번째 러스트 프로그램 작성하기 ❕
