--- a/01시작.md
+++ b/01시작.md
@@ -1,5 +1,7 @@
 1st. 시작
 =============
+[1. 설치](#1-설치)<br>
+[2. first rust](#2-첫번째-러스트-프로그램-작성하기-)
 
 # 1. 설치
 1. 우분투 열기<br><br>
@@ -19,3 +21,11 @@
    <pre><code>rustc --version</code></pre>
    
 # 2. 첫번째 러스트 프로그램 작성하기 ❕
+1. 디렉토리 생성
+   <pre><code>mkdir ~/firstrust</code></pre><br>
+2. 해당 디렉토리로 이동
+   <pre><code>cd ~/firstrust</code></pre><br>
+3. 파일 생성
+   <pre><code>mkdir hello_world</code></pre><br>
+4. 파일로 이동
+   <pre><code>cd hello_world</code></pre>
