--- a/01시작.md
+++ b/01시작.md
@@ -28,4 +28,5 @@
 3. 파일 생성
    <pre><code>mkdir hello_world</code></pre><br>
 4. 파일로 이동
-   <pre><code>cd hello_world</code></pre>
+   <pre><code>cd hello_world</code></pre><br>
+\+ 러스트 파일은 <i>.rs</i> 확장자임 ❕
