--- a/01시작.md
+++ b/01시작.md
@@ -21,12 +21,14 @@
    <pre><code>rustc --version</code></pre>
    
 # 2. 첫번째 러스트 프로그램 작성하기 ❕
-1. 디렉토리 생성
-   <pre><code>mkdir ~/firstrust</code></pre><br>
-2. 해당 디렉토리로 이동
-   <pre><code>cd ~/firstrust</code></pre><br>
-3. 파일 생성
-   <pre><code>mkdir hello_world</code></pre><br>
-4. 파일로 이동
-   <pre><code>cd hello_world</code></pre><br>
-\+ 러스트 파일은 <i>.rs</i> 확장자임 ❕
+1. 디렉토리 생성<br><br>
+2. 해당 디렉토리로 이동<br><br>
+3. 파일 생성<br><br>
+4. 파일로 이동<br><br>
+<pre><b>🌸 러스트 파일은 <i>.rs</i> 확장자임❕</b></pre>
+5. 실행하는 법
+* <code>$ rust 파일명.rs</code> ➡️컴파일
+   * gcc 또는 clang과 유사.<br>
+* <code>$ ./파일명</code> ➡️실행
+<br><br>
+## 러스트 형식
