--- a/01시작.md
+++ b/01시작.md
@@ -32,3 +32,4 @@
 * <code>$ ./파일명</code> ➡️실행
 <br><br>
 ## 러스트 형식
+⭐[C언어와 비교](https://atomic0x90.github.io/c-language/2019/05/23/Characteristics-and-structure-of-language-C.html) 
