--- a/01시작.md
+++ b/01시작.md
@@ -32,4 +32,5 @@
 * <code>$ ./파일명</code> ➡️실행
 <br><br>
 ## 러스트 형식
-⭐[C언어와 비교](https://atomic0x90.github.io/c-language/2019/05/23/Characteristics-and-structure-of-language-C.html) 
+⭐[C언어와 비교](https://atomic0x90.github.io/c-language/2019/05/23/Characteristics-and-structure-of-language-C.html)<br>
+<p align="center"><img src="https://github.com/redzzzi/rust23summer/assets/127263392/6204fcc8-050d-494d-be11-325f03e827d9" width="350px"></p>
