--- a/01시작.md
+++ b/01시작.md
@@ -27,10 +27,26 @@
 4. 파일로 이동<br><br>
 <pre><b>🌸 러스트 파일은 <i>.rs</i> 확장자임❕</b></pre>
 5. 실행하는 법
-* <code>$ rust 파일명.rs</code> ➡️컴파일
+* <code>$ rust 파일명.rs</code> ➡️ 컴파일
    * gcc 또는 clang과 유사.<br>
-* <code>$ ./파일명</code> ➡️실행
+* <code>$ ./파일명</code> ➡️ 실행
 <br><br>
 ## 러스트 형식
 ⭐[C언어와 비교](https://atomic0x90.github.io/c-language/2019/05/23/Characteristics-and-structure-of-language-C.html)<br>
-<p align="center"><img src="https://github.com/redzzzi/rust23summer/assets/127263392/6204fcc8-050d-494d-be11-325f03e827d9" width="350px"></p>
+<p align="center"><img src="https://github.com/redzzzi/rust23summer/assets/127263392/6204fcc8-050d-494d-be11-325f03e827d9" width="350px"></p><br>
+<pre>
+   fn main() {<br>
+   }
+</pre>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;➡️ 함수 정의<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;➡️ <b>( )</b> 내부 parameter ❌ → 아무것도 반환하지 않는 main이라는 함수<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;➡️ 함수 본체 <b>{ }</b>로 감싸짐<br><br>
+<pre>
+   println!("Hello, world!");
+</pre>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;➡️ <code>!</code>는 매크로 호출 의미.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1️⃣ 스트링을 <code>println!</code>의 인자로 넘김. 2️⃣ 스트링 출력.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;➡️ line finished with <code>;</code><br><br>
+
+\+ 실행 파일 확인
+<code>$ ls</code>
