--- a/01시작.md
+++ b/01시작.md
@@ -1,7 +1,8 @@
 1st. 시작
 =============
 [1. 설치](#1-설치)<br>
-[2. first rust](#2-첫번째-러스트-프로그램-작성하기-)
+[2. first rust](#2-첫번째-러스트-프로그램-작성하기-)<br>
+[3. Cargo](#3-cargo-build-system--package-manager-of-rust)
 
 # 1. 설치
 1. 우분투 열기<br><br>
@@ -50,3 +51,5 @@
 
 \+ 실행 파일 확인
 <code>$ ls</code>
+
+# 3. Cargo, build system & package manager of rust
