--- a/03프로그래밍개념.md
+++ b/03프로그래밍개념.md
@@ -10,6 +10,8 @@
 # 1. 변수와 가변성
 * 기본 변수 ➡️ immutable<br>
 * 변수가 불변성인 상태에서 값이 바운드 되면 해당 값 변경 불가.<br>
+
+* <code>mut</code>를 통한 가변성 변수 선언.
 # 2. 데이터 타입들
 # 3. 함수 동작 원리
 # 4. 주석
