--- a/03프로그래밍개념.md
+++ b/03프로그래밍개념.md
@@ -12,6 +12,13 @@
 * 변수가 불변성인 상태에서 값이 바운드 되면 해당 값 변경 불가.<br>
 
 * <code>mut</code>를 통한 가변성 변수 선언.
+
+* difference between variables and constants
+&nbsp;&nbsp;&nbsp;&nbsp;1️⃣ 변수에만 <code>mut</code> 사용 ∵ 상수는 불변성 그 자체임❕️<br>
+&nbsp;&nbsp;&nbsp;&nbsp;2️⃣ 값의 유형 선언<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;변수 ➡️ <code>let</code><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;상수 ➡️ <code>const</code>
+&nbsp;&nbsp;&nbsp;&nbsp;3️⃣ 
 # 2. 데이터 타입들
 # 3. 함수 동작 원리
 # 4. 주석
