--- a/03프로그래밍개념.md
+++ b/03프로그래밍개념.md
@@ -16,8 +16,8 @@
 * difference between variables and constants<br>
 &nbsp;&nbsp;&nbsp;&nbsp;1️⃣ 변수에만 <code>mut</code> 사용 ∵ 상수는 불변성 그 자체임❕️<br>
 &nbsp;&nbsp;&nbsp;&nbsp;2️⃣ 값의 유형 선언<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;변수 ➡️ <code>let</code><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;상수 ➡️ <code>const</code><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;변수 ➡️ <code>let</code><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;상수 ➡️ <code>const</code><br>
 &nbsp;&nbsp;&nbsp;&nbsp;3️⃣ 
 # 2. 데이터 타입들
 # 3. 함수 동작 원리
