--- a/01시작.md
+++ b/01시작.md
@@ -28,7 +28,7 @@
 4. 파일로 이동<br><br>
 <pre><b>🌸 러스트 파일은 <i>.rs</i> 확장자임❕</b></pre>
 5. 실행하는 법
-* <code>$ rust 파일명.rs</code> ➡️ 컴파일
+* <code>$ rustc 파일명.rs</code> ➡️ 컴파일 ~~c==compile인듯..?~~
    * gcc 또는 clang과 유사.<br>
 * <code>$ ./파일명</code> ➡️ 실행
 <br><br>
@@ -53,3 +53,4 @@
 <code>$ ls</code>
 
 # 3. Cargo, build system & package manager of rust
+* <i>dependency</i>: library needed by the code
