--- a/01시작.md
+++ b/01시작.md
@@ -54,3 +54,8 @@
 
 # 3. Cargo, build system & package manager of rust
 * <i>dependency</i>: library needed by the code
+* project creation using <b>Cargo</b><br>
+<pre>
+   $ cargo new XXX --bin
+</pre>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;➡️ creating newly practicable binary called XXX<br>
