--- a/01시작.md
+++ b/01시작.md
@@ -39,15 +39,15 @@
    fn main() {<br>
    }
 </pre>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;➡️ 함수 정의<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;➡️ <b>( )</b> 내부 parameter ❌ → 아무것도 반환하지 않는 main이라는 함수<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;➡️ 함수 본체 <b>{ }</b>로 감싸짐<br><br>
+&emsp;&nbsp;&nbsp;➡️ 함수 정의<br>
+&emsp;&nbsp;&nbsp;➡️ <b>( )</b> 내부 parameter ❌ → 아무것도 반환하지 않는 main이라는 함수<br>
+&emsp;&nbsp;&nbsp;➡️ 함수 본체 <b>{ }</b>로 감싸짐<br><br>
 <pre>
    println!("Hello, world!");
 </pre>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;➡️ <code>!</code>는 매크로 호출 의미.<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1️⃣ 스트링을 <code>println!</code>의 인자로 넘김. 2️⃣ 스트링 출력.<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;➡️ line finished with <code>;</code><br><br>
+&emsp;&nbsp;&nbsp;➡️ <code>!</code>는 매크로 호출 의미.<br>
+&emsp;&nbsp;&nbsp;1️⃣ 스트링을 <code>println!</code>의 인자로 넘김. 2️⃣ 스트링 출력.<br>
+&emsp;&nbsp;&nbsp;➡️ line finished with <code>;</code><br><br>
 
 \+ 실행 파일 확인
 <code>$ ls</code>
@@ -58,4 +58,9 @@
 <pre>
    $ cargo new XXX --bin
 </pre>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;➡️ creating newly practicable binary called XXX<br>
+&emsp;&nbsp;&nbsp;➡️ creating newly practicable binary called XXX<br><br>
+&emsp;&nbsp;&nbsp;➡️ as practicable application through <code>--bin</code><br><br>
+&emsp;&emsp;<img src="https://github.com/redzzzi/rust23summer/assets/127263392/519b8c49-5658-4c40-a928-da24319efa6d" width="500px"><br><br>
+&emsp;&emsp;➡️ Cargo.toml 파일과 main.rs 파일을 담은 src 디렉토리<br><br>
+&emsp;&emsp;<img src="https://github.com/redzzzi/rust23summer/assets/127263392/8a94da48-f89e-47f4-9c99-4983579bac53" width="500px"><br><br>
+&emsp;&emsp;➡️ <code>vi Cargo.toml</code><br><br>
