--- a/01시작.md
+++ b/01시작.md
@@ -22,9 +22,9 @@
    <pre><code>rustc --version</code></pre>
    
 # 2. 첫번째 러스트 프로그램 작성하기 ❕
-1. 디렉토리 생성<br><br>
+1. 디렉토리 생성 ~~\~/firstrust~~<br><br>
 2. 해당 디렉토리로 이동<br><br>
-3. 파일 생성<br><br>
+3. 파일 생성 ~~hello_world~~<br><br>
 4. 파일로 이동<br><br>
 <pre><b>🌸 러스트 파일은 <i>.rs</i> 확장자임❕</b></pre>
 5. 실행하는 법
@@ -55,12 +55,14 @@
 # 3. Cargo, build system & package manager of rust
 * <i>dependency</i>: library needed by the code
 * project creation using <b>Cargo</b><br>
-<pre>
+&emsp;&nbsp;&nbsp;<pre>
    $ cargo new XXX --bin
 </pre>
 &emsp;&nbsp;&nbsp;➡️ creating newly practicable binary called XXX<br><br>
 &emsp;&nbsp;&nbsp;➡️ as practicable application through <code>--bin</code><br><br>
 &emsp;&emsp;<img src="https://github.com/redzzzi/rust23summer/assets/127263392/519b8c49-5658-4c40-a928-da24319efa6d" width="500px"><br><br>
 &emsp;&emsp;➡️ Cargo.toml 파일과 main.rs 파일을 담은 src 디렉토리<br><br>
-&emsp;&emsp;<img src="https://github.com/redzzzi/rust23summer/assets/127263392/8a94da48-f89e-47f4-9c99-4983579bac53" width="500px"><br><br>
-&emsp;&emsp;➡️ <code>vi Cargo.toml</code><br><br>
+
+* <i>Cargo.toml</i> content check by text editor<br><br>
+&nbsp;&nbsp;<img src="https://github.com/redzzzi/rust23summer/assets/127263392/8a94da48-f89e-47f4-9c99-4983579bac53" width="500px"><br><br>
+&nbsp;&nbsp;➡️ <code>vi Cargo.toml</code><br><br>
