--- a/01시작.md
+++ b/01시작.md
@@ -66,3 +66,10 @@
 * <i>Cargo.toml</i> content check by text editor<br><br>
 &nbsp;&nbsp;<img src="https://github.com/redzzzi/rust23summer/assets/127263392/8a94da48-f89e-47f4-9c99-4983579bac53" width="700px"><br><br>
 &nbsp;&nbsp;➡️ <code>vi Cargo.toml</code><br><br>
+&nbsp;&nbsp;➡️ Cargo.toml means Cargo setting format<br><br>
+
+* <i>src/main.rs</i> content check<br><br>
+&nbsp;&nbsp;<img src="https://github.com/redzzzi/rust23summer/assets/127263392/e6c6d522-1ae1-4db3-874e-db3effb6f5a5" width="300px"><br><br>
+&nbsp;&nbsp;🎀 difference between Cargo used/unused program<br><br>
+&emsp;1️⃣ Cargo가 코드를 src 디렉토리 안에 위치시킴. 2️⃣ 최상위 디렉토리에 환경파일 보유.
+
