--- a/01시작.md
+++ b/01시작.md
@@ -6,11 +6,11 @@
 
 # 1. 설치
 1. 우분투 열기<br><br>
-2. 아래 명령어 입력<br>
-   <pre><code>curl https://sh.rustup.rs -sSf | sh</code></pre><br>
-3. "1" 입력<br>
+2. 아래 명령어 입력<br><br>
+   <pre><code>curl https://sh.rustup.rs -sSf | sh</code></pre>
+3. "1" 입력<br><br>
    <img src="https://github.com/redzzzi/rust23summer/assets/127263392/7170cb69-6ede-4e24-abd9-8cde115199f2" width="300px"><br><br>
-4. 설치 성공 ‼️<br>
+4. 설치 성공 ‼️<br><br>
    <pre>Rust is installed now. Great!</pre><br>
 \+ 러스트를 시스템 패스에 추가
    <pre><code>source $HOME/.cargo/env</code></pre>
@@ -71,5 +71,11 @@
 * <i>src/main.rs</i> content check<br><br>
 &nbsp;&nbsp;<img src="https://github.com/redzzzi/rust23summer/assets/127263392/e6c6d522-1ae1-4db3-874e-db3effb6f5a5" width="300px"><br><br>
 &nbsp;&nbsp;🎀 difference between Cargo used/unused program<br><br>
-&emsp;1️⃣ Cargo가 코드를 src 디렉토리 안에 위치시킴. 2️⃣ 최상위 디렉토리에 환경파일 보유.
-
+&emsp;1️⃣ Cargo가 코드를 src 디렉토리 안에 위치시킴. 2️⃣ 최상위 디렉토리에 환경파일 보유.<br><br>
+## Cargo project building and practicing
+* project building inputting the command lines below<br><br>
+  <code>cargo build</code><br><br>
+  \+ also indicating Cargo creates a new file <i>Cargo.lock</i> on the primary dir.<br><br>
+* creating EXE files on <i>target/debug/hello_cargo</i> (or <i>target\debug\hello_cargo.exe on Windows</i>) instead of the present dir.<br><br>
+   <code>./target/debug/hello_cargo</code> or <code>.\target\debug\hello_cargo.exe on Windows</code><br><br>
+   <img src="https://github.com/redzzzi/rust23summer/assets/127263392/b54528a4-093f-4cf1-b440-1b349931bee4" width="600px">
