--- a/01시작.md
+++ b/01시작.md
@@ -74,8 +74,10 @@
 &emsp;1️⃣ Cargo가 코드를 src 디렉토리 안에 위치시킴. 2️⃣ 최상위 디렉토리에 환경파일 보유.<br><br>
 ## Cargo project building and practicing
 * project building inputting the command lines below<br><br>
-  <code>cargo build</code><br><br>
+  <code>$ cargo build</code><br><br>
   \+ also indicating Cargo creates a new file <i>Cargo.lock</i> on the primary dir.<br><br>
 * creating EXE files on <i>target/debug/hello_cargo</i> (or <i>target\debug\hello_cargo.exe on Windows</i>) instead of the present dir.<br><br>
-   <code>./target/debug/hello_cargo</code> or <code>.\target\debug\hello_cargo.exe on Windows</code><br><br>
+   <code>$ ./target/debug/hello_cargo</code> or <code>.\target\debug\hello_cargo.exe on Windows</code><br><br>
    <img src="https://github.com/redzzzi/rust23summer/assets/127263392/b54528a4-093f-4cf1-b440-1b349931bee4" width="600px">
+* two command above at once<br><br>
+   <code>$ cargo run</code>
