--- a/01시작.md
+++ b/01시작.md
@@ -80,4 +80,21 @@
    <code>$ ./target/debug/hello_cargo</code> or <code>.\target\debug\hello_cargo.exe on Windows</code><br><br>
    <img src="https://github.com/redzzzi/rust23summer/assets/127263392/b54528a4-093f-4cf1-b440-1b349931bee4" width="600px">
 * two command above at once<br><br>
-   <code>$ cargo run</code>
+   <code>$ cargo run</code><br><br>
+   <img src="https://github.com/redzzzi/rust23summer/assets/127263392/1d50ff50-e7d8-407b-9bd9-b18b4b63ab57" width="600px"><br><br>
+\+ after editing the code ➡️ <code>cargo build</code> <code>cargo run</code><br><br>
+* checking the code compiling stat (not creating the practice file)<br><br>
+   <code>cargo check</code><br>
+   ➡️ cargo checking habituation needed<br>
+   ➡️ speed: <code>cargo run</code> < <code>cargo check</code><br><br>
+## Release build
+* optimizing and compiling<br><br>
+  <code>cargo build --release</code><br>
+  ➡️ creating practice file on <i>target/release</i> instead of <i>target/debug</i><br>
+  ➡️ optimizing → contributes to the efficiency <code>ALSO</code> long time of compiling the program (view of <b>TURN ON</b>)<br><br>
+## Git
+* [GIT]code check out and build<br><br>
+  <code>$ git clone someurl.com/someproject</code><br>
+  <code>$ cd someproject</code><br>
+  <code>$ cargo build</code><br><br>
+[FMI on <i><b>Cargo</b></i>](doc.rust-lang.org/cargo/)<br><br>
