--- a/01시작.md
+++ b/01시작.md
@@ -29,7 +29,7 @@
 <pre><b>🌸 러스트 파일은 <i>.rs</i> 확장자임❕</b></pre>
 5. 실행하는 법
 * <code>$ rustc 파일명.rs</code> ➡️ 컴파일 ~~c==compile인듯..?~~
-   * gcc 또는 clang과 유사.<br>
+   * gcc 또는 clang과 유사.<br><br>
 * <code>$ ./파일명</code> ➡️ 실행
 <br><br>
 ## 러스트 형식
