--- a/02추리게임튜토리얼.md
+++ b/02추리게임튜토리얼.md
@@ -1,2 +1,7 @@
-2nd. 
+2nd. 추리 게임 튜토리얼
 =============
+# Guessing game
+1️⃣ 1~100 random integer generated<br>
+2️⃣ input the integer guessed by a player on the program<br>
+3️⃣ show whether the guessed number is higher/lower than the ans<br>
+4️⃣ correct → congrats msg & exit
