--- a/02추리게임튜토리얼.md
+++ b/02추리게임튜토리얼.md
@@ -4,4 +4,4 @@
 1️⃣ 1~100 random integer generated<br>
 2️⃣ input the integer guessed by a player on the program<br>
 3️⃣ show whether the guessed number is higher/lower than the ans<br>
-4️⃣ correct → congrats msg & exit
+4️⃣ correct → congrats msg & exit<br><br>
