--- a/02추리게임튜토리얼.md
+++ b/02추리게임튜토리얼.md
@@ -5,3 +5,32 @@
 2️⃣ input the integer guessed by a player on the program<br>
 3️⃣ show whether the guessed number is higher/lower than the ans<br>
 4️⃣ correct → congrats msg & exit<br><br>
+
+## new project prep
+<pre>
+$ cd ~/firstrust
+$ cargo new guessing_game --bin
+$ cd guessing_game
+</pre><br>
+<pre>$ vi Cargo.toml</pre>
+* former setting<br>
+  <img src="https://github.com/redzzzi/rust23summer/assets/127263392/1e622d84-af51-46ee-96de-f35cec95ab13" width="500px"><br><br>
+* edit author setting<br><br>
+  <code>authors = ["Your Name <you@example.com>"]</code><br><br>
+* process the guessed<br><br>
+  <pre>vi src/main.rs</pre><br><br>
+  <pre><code>use std::io;
+
+  fn main() {
+  println!("Guess the number!");
+
+  println!("Please input your guess.");
+
+  let mut guess = String::new();
+
+  io::stdin().read_line(&mut guess)
+      .expect("Failed to read line");
+
+  println!("You guessed: {}", guess);
+  }
+  </code></pre>
