--- a/02추리게임튜토리얼.md
+++ b/02추리게임튜토리얼.md
@@ -14,11 +14,11 @@ $ cd guessing_game
 </pre><br>
 <pre>$ vi Cargo.toml</pre>
 * former setting<br>
-  <img src="https://github.com/redzzzi/rust23summer/assets/127263392/1e622d84-af51-46ee-96de-f35cec95ab13" width="500px"><br><br>
+  <img src="https://github.com/redzzzi/rust23summer/assets/127263392/1e622d84-af51-46ee-96de-f35cec95ab13" width="600px"><br><br>
 * edit author setting<br><br>
   <code>authors = ["Your Name <you@example.com>"]</code><br><br>
 * process the guessed<br><br>
-  <pre>vi src/main.rs</pre><br><br>
+  <pre>vi src/main.rs</pre><br>
   <pre><code>use std::io;
 
   fn main() {
