--- a/02추리게임튜토리얼.md
+++ b/02추리게임튜토리얼.md
@@ -33,4 +33,13 @@ $ cd guessing_game
 
   println!("You guessed: {}", guess);
   }
-  </code></pre>
+  </code></pre><br>
+  * <code>use std::io;</code><br><br>
+    ➡️ 입력값 받고 결과값 표시<br>
+    ➡️ <code>io</code> 라이브러리 스코프로 가져오기 (<code>io</code> ⊂ <code>std</code>)<br><br>
+  * <code>let mut guess = String::new();</code><br><br>
+    ➡️ 값을 변수에 저장<br><br>
+    * 변수 선언 예시<br><br>
+      <pre>let foo = bar;</pre> ➡️ <code>foo</code> 변수 선언 후, <code>bar</code> 값과 묶기.<br><br><br>
+      <pre>let foo = 5; // immutable
+      let mut bar = 5; // mutable</pre> ➡️ <code>mut</code>를 이용한 가변변수 만들기.
