--- a/02추리게임튜토리얼.md
+++ b/02추리게임튜토리얼.md
@@ -38,8 +38,13 @@ $ cd guessing_game
     ➡️ 입력값 받고 결과값 표시<br>
     ➡️ <code>io</code> 라이브러리 스코프로 가져오기 (<code>io</code> ⊂ <code>std</code>)<br><br>
   * <code>let mut guess = String::new();</code><br><br>
-    ➡️ 값을 변수에 저장<br><br>
+    ➡️ 값을 변수에 저장<br>
+    ✨새로운 빈 <code>String</code> 인스턴스와 연결된 가변변수 생성✨<br><br>
     * 변수 선언 예시<br><br>
-      <pre>let foo = bar;</pre> ➡️ <code>foo</code> 변수 선언 후, <code>bar</code> 값과 묶기.<br><br><br>
+      <pre>let foo = bar;</pre> ➡️ <code>foo</code> 변수 선언 후, <code>bar</code> 값과 묶기.<br><br>
       <pre>let foo = 5; // immutable
-      let mut bar = 5; // mutable</pre> ➡️ <code>mut</code>를 이용한 가변변수 만들기.
+      let mut bar = 5; // mutable</pre> ➡️ <code>mut</code>를 이용한 가변변수 만들기.<br><br>
+    * <code>String::new</code> == 새로운 <code>String</code> 인스턴스<br>
+      \+ <code>String</code>: UTF-8 인코딩 문자열 타입<br><br>
+      ➡️ <code>::</code>의 역할: <code>new</code>가 <code>String</code> 타입의 <i>연관함수</i>임을 나타냄.<br>
+      
