--- a/02추리게임튜토리얼.md
+++ b/02추리게임튜토리얼.md
@@ -40,11 +40,14 @@ println!("You guessed: {}", guess);
 * <code>let mut guess = String::new();</code><br><br>
   ➡️ 값을 변수에 저장<br>
   ✨새로운 빈 <code>String</code> 인스턴스와 연결된 가변변수 생성✨<br><br>
-  * 변수 선언 예시<br><br>
+  * 변수 선언 예시<br>
     <pre>let foo = bar;</pre> ➡️ <code>foo</code> 변수 선언 후, <code>bar</code> 값과 묶기.<br><br>
     <pre>let foo = 5; // immutable
     let mut bar = 5; // mutable</pre> ➡️ <code>mut</code>를 이용한 가변변수 만들기.<br><br>
   * <code>String::new</code> == 새로운 <code>String</code> 인스턴스<br>
     \+ <code>String</code>: UTF-8 인코딩 문자열 타입<br><br>
-    ➡️ <code>::</code>의 역할: <code>new</code>가 <code>String</code> 타입의 <i>연관함수</i>임을 나타냄.<br>
-      
+    ➡️ <code>::</code>의 역할: <code>new</code>가 <code>String</code> 타입의 <i>연관함수</i>임을 나타냄.<br><br>
+* <pre>io::stdin().read_line(&mut guess)<br>  .expect("Failed to read line");</pre>
+  * <code>use std::io</code> 없었다면❓ <code>std::io::stdin</code>처럼 작성해야 함❣️<br>
+  * <code>stdin</code> 함수는 <code>std::io::Stdin</code> 인스턴스 반환<br>
+  * <code>.read_line(&mut guess)</code><br>&emsp;🐰입력을 받기 위해 표준 입력 핸들에서 메소드 호출한 것임.<br>&emsp;🐰<code>read_line</code>에 <code>&mut guess</code>를 인자로 넘김
