--- a/02추리게임튜토리얼.md
+++ b/02추리게임튜토리얼.md
@@ -50,4 +50,13 @@ println!("You guessed: {}", guess);
 * <pre>io::stdin().read_line(&mut guess)<br>  .expect("Failed to read line");</pre>
   * <code>use std::io</code> 없었다면❓ <code>std::io::stdin</code>처럼 작성해야 함❣️<br>
   * <code>stdin</code> 함수는 <code>std::io::Stdin</code> 인스턴스 반환<br>
-  * <code>.read_line(&mut guess)</code><br>&emsp;🐰입력을 받기 위해 표준 입력 핸들에서 메소드 호출한 것임.<br>&emsp;🐰<code>read_line</code>에 <code>&mut guess</code>를 인자로 넘김
+  * <code>.read_line(&mut guess)</code><br>🐰입력을 받기 위해 표준 입력 핸들에서 메소드 호출한 것임.<br>🐰<code>read_line</code>에 <code>&mut guess</code>를 인자로 넘김<br>
+  * <code>read_line</code><br>🐰입력된 문자들을 하나의 문자열에 저장 ➡️ 값 저장할 문자열 필요<br>🐰하나의 값을 돌려줌<br>
+  * <code>&</code> 여러 번 메모리로 복사하지 않고 접근하도록 하는 <i>참조자</i><br><br>
+* <pre>.expect("Failed to read line");</pre>
+  💕위 라인을 다음과 같이 쓸 수 있음  <code>io::stdin().read_line(&mut guess) .expect("Failed to read line");</code><br><br>
+## Result type handles the potential failures
+* 에러 처리를 위한 정보 표현에 사용됨
+* ```Result``` 타입: <i>열거형(enumerations)</i>, also called <i>enums</i><br>
+* ```Result``` variants: Ok ➡️ 처리 성공 / Err ➡️ 실패<br>
+* ```io::Result``` 인스턴스는 ```expect``` 메소드를 가짐.
