--- a/02추리게임튜토리얼.md
+++ b/02추리게임튜토리얼.md
@@ -55,8 +55,13 @@ println!("You guessed: {}", guess);
   * <code>&</code> 여러 번 메모리로 복사하지 않고 접근하도록 하는 <i>참조자</i><br><br>
 * <pre>.expect("Failed to read line");</pre>
   💕위 라인을 다음과 같이 쓸 수 있음  <code>io::stdin().read_line(&mut guess) .expect("Failed to read line");</code><br><br>
-## Result type handles the potential failures
-* 에러 처리를 위한 정보 표현에 사용됨
-* ```Result``` 타입: <i>열거형(enumerations)</i>, also called <i>enums</i><br>
-* ```Result``` variants: Ok ➡️ 처리 성공 / Err ➡️ 실패<br>
-* ```io::Result``` 인스턴스는 ```expect``` 메소드를 가짐.
+* Result type handles the potential failures
+  
+  * 에러 처리를 위한 정보 표현에 사용됨
+  * ```Result``` 타입: <i>열거형(enumerations)</i>, also called <i>enums</i>
+  * ```Result``` variants: Ok ➡️ 처리 성공 / Err ➡️ 실패
+  * ```io::Result``` 인스턴스는 ```expect``` 메소드를 가짐.
+<br><br>
+* ```rust
+  println!("You guessed: {}", guess);
+  ```
