--- a/02추리게임튜토리얼.md
+++ b/02추리게임튜토리얼.md
@@ -65,3 +65,69 @@ println!("You guessed: {}", guess);
 * ```rust
   println!("You guessed: {}", guess);
   ```
+  💕 ```{ }```는 변경자로써 값이 표시되는 위치 표시.<br><br>
+```$ cargo run```<br>
+  ```rust
+  ➜  guessing_game git:(master) ✗ cargo run
+     Compiling guessing_game v0.1.0 (/home/redzzzi/firstrust/guessing_game)
+      Finished dev [unoptimized + debuginfo] target(s) in 0.17s
+       Running `target/debug/guessing_game`
+  Guess the number!
+  Please input your guess.
+  6
+  You guessed: 6
+  ```
+<br><br>
+## generate random number
+* 러스트 코드의 패키지인 <i>크레이트(crate)</i> 사용하기<br>
+  1️⃣
+  ```rust
+  vi Cargo.toml
+  ```
+  2️⃣
+  ```rust
+  [dependencies]
+
+  rand = "0.3.14"
+  ```
+  3️⃣ 다운 완료 ❕
+  ```rust
+  ➜  guessing_game git:(master) ✗ cargo build
+    Updating crates.io index
+  Downloaded rand v0.3.23
+  Downloaded rand v0.4.6
+  Downloaded libc v0.2.147
+  Downloaded 3 crates (774.5 KB) in 3.35s
+   Compiling libc v0.2.147
+   Compiling rand v0.4.6
+   Compiling rand v0.3.23
+   Compiling guessing_game v0.1.0 (/home/redzzzi/firstrust/guessing_game)
+    Finished dev [unoptimized + debuginfo] target(s) in 5.42s
+  ```
+<br>
+
+* 임의 숫자 생성
+
+  ```rust rs:src/main.rs
+  extern crate rand; //added
+  
+  use std::io;
+  use rand::Rng; //added
+  
+  fn main() {
+      println!("Guess the number!");
+  
+      let secret_number = rand::thread_rng().gen_range(1, 101); //added
+  
+      println!("The secret number is: {}", secret_number); //added
+  
+      println!("Please input your guess.");
+  
+      let mut guess = String::new();
+  
+      io::stdin().read_line(&mut guess)
+          .expect("Failed to read line");
+  
+      println!("You guessed: {}", guess);
+  }
+  ```
