--- a/02추리게임튜토리얼.md
+++ b/02추리게임튜토리얼.md
@@ -108,7 +108,7 @@ println!("You guessed: {}", guess);
 
 * 임의 숫자 생성
 
-  ```rust rs:src/main.rs
+  ```rust
   extern crate rand; //added
   
   use std::io;
@@ -131,3 +131,41 @@ println!("You guessed: {}", guess);
       println!("You guessed: {}", guess);
   }
   ```
+  * ```extern crate rand;```: 외부 의존 크레이트 있음.<br><br>
+## compare secret num with the guessed
+* 두 숫자 비교 결과 처리
+  ```rust
+  extern crate rand;
+  
+  use std::io;
+  use std::cmp::Ordering; //added
+  use rand::Rng;
+  
+  fn main() {
+      println!("Guess the number!");
+  
+      let secret_number = rand::thread_rng().gen_range(1, 101);
+  
+      println!("The secret number is: {}", secret_number);
+  
+      println!("Please input your guess.");
+  
+      let mut guess = String::new();
+  
+      io::stdin().read_line(&mut guess)
+          .expect("Failed to read line");
+  
+      println!("You guessed: {}", guess);
+  
+      //added below
+      match guess.cmp(&secret_number) {
+          Ordering::Less    => println!("Too small!"),
+          Ordering::Greater => println!("Too big!"),
+          Ordering::Equal   => println!("You win!"),
+      }
+  }
+  ```
+  * ```cmp``` 메소드<br>
+    🐰 ```guess```와 ```secret_number``` 비교<br>
+    🐰 ```Ordering``` 열거형 반환<br>
+    🐰 [```match```](https://rinthel.github.io/rust-lang-book-ko/ch06-02-match.html) 이용하여 ```Ordering``` 값에 따라 처리
