--- a/02추리게임튜토리얼.md
+++ b/02추리게임튜토리얼.md
@@ -60,7 +60,7 @@ println!("You guessed: {}", guess);
   * 에러 처리를 위한 정보 표현에 사용됨
   * ```Result``` 타입: <i>열거형(enumerations)</i>, also called <i>enums</i>
   * ```Result``` variants: Ok ➡️ 처리 성공 / Err ➡️ 실패
-  * ```io::Result``` 인스턴스는 ```expect``` 메소드를 가짐.
+  * ```io::Result``` 인스턴스는 [```expect```](https://doc.rust-lang.org/std/result/enum.Result.html#method.expect) 메소드를 가짐.
 <br><br>
 * ```rust
   println!("You guessed: {}", guess);
