--- a/02추리게임튜토리얼.md
+++ b/02추리게임튜토리얼.md
@@ -169,3 +169,107 @@ println!("You guessed: {}", guess);
     🐰 ```guess```와 ```secret_number``` 비교<br>
     🐰 ```Ordering``` 열거형 반환<br>
     🐰 [```match```](https://rinthel.github.io/rust-lang-book-ko/ch06-02-match.html) 이용하여 ```Ordering``` 값에 따라 처리
+<br>
+
+* 입력받은 ```String``` 정수 변환 필요
+  ```rust
+  let guess: u32 = guess.trim().parse()
+    .expect("Please type a number!")
+  ```
+  \+ ```i32```: 32비트 정수, ```i64```: 64비트 정수, ```u32```: 부호 없는 32비트 정수<br><br>
+  * ```trim``` 메소드: 처음과 끝 부분의 빈칸 제거 (예상 번호 입력 후 enter키 누르는 경우를 고려한 것)
+  * [```parse```](https://doc.rust-lang.org/std/primitive.str.html#method.parse) 메소드: 문자열을 숫자형으로 파싱
+  * ```let guess: u32```와 같이 정확한 타입 명시
+  * 콜론을 통해 변수 타입 명시
+<br><br>
+## allow many guessings using <i>loop</i>
+
+* loop로 감싸기
+  ```rust
+  loop {
+      println!("Please input your guess.");
+  
+      let mut guess = String::new();
+  
+      io::stdin().read_line(&mut guess)
+          .expect("Failed to read line");
+  
+      let guess: u32 = guess.trim().parse()
+          .expect("Please type a number!");
+  
+      println!("You guessed: {}", guess);
+  
+      match guess.cmp(&secret_number) {
+          Ordering::Less    => println!("Too small!"),
+          Ordering::Greater => println!("Too big!"),
+          Ordering::Equal   => println!("You win!"),
+      }
+  }
+  ```
+<br>
+
+## end after the ans shown
+
+* ```break```문 추가
+  ```rust
+  Ordering::Equal   => {
+    println!("You win!");
+    break;
+  }
+  ```
+<br>
+
+## process wrong input
+
+* 숫자가 아닌 입력 무시
+  ```rust
+  let guess: u32 = match guess.trim().parse() {
+    Ok(num) => num,
+    Err(_)  => continue,
+  };
+  ```
+
+<br>
+
+# fin code
+
+```rust
+extern crate rand;
+
+use std::io;
+use std::cmp::Ordering;
+use rand::Rng;
+
+fn main() {
+    println!("Guess the number!");
+
+    let secret_number = rand::thread_rng().gen_range(1, 101);
+
+    println!("The secret number is: {}", secret_number);
+
+    loop {
+        println!("Please input your guess.");
+
+        let mut guess = String::new();
+
+        io::stdin().read_line(&mut guess)
+            .expect("Failed to read line");
+
+        let guess: u32 = match guess.trim().parse() {
+            Ok(num) => num,
+            Err(_)  => continue,
+        };
+
+        println!("You guessed: {}", guess);
+
+        match guess.cmp(&secret_number) {
+            Ordering::Less    => println!("Too small!"),
+            Ordering::Greater => println!("Too big!"),
+            Ordering::Equal   => {
+                println!("You win!");
+                break;
+            }
+        }
+    }
+}
+```
