--- a/02추리게임튜토리얼.md
+++ b/02추리게임튜토리얼.md
@@ -1,5 +1,6 @@
 2nd. 추리 게임 튜토리얼
 =============
+[1. let](
 # Guessing game
 1️⃣ 1~100 random integer generated<br>
 2️⃣ input the integer guessed by a player on the program<br>
