--- a/02추리게임튜토리얼.md
+++ b/02추리게임튜토리얼.md
@@ -1,6 +1,7 @@
 2nd. 추리 게임 튜토리얼
 =============
-[1. let](
+```let``` ```match``` ```method``` ```associated function``` ```external crate```
+<br><br>
 # Guessing game
 1️⃣ 1~100 random integer generated<br>
 2️⃣ input the integer guessed by a player on the program<br>
