--- a/03프로그래밍개념.md
+++ b/03프로그래밍개념.md
@@ -10,15 +10,51 @@
 # 1. 변수와 가변성
 * 기본 변수 ➡️ immutable<br>
 * 변수가 불변성인 상태에서 값이 바운드 되면 해당 값 변경 불가.<br>
+  * 변경 시도하면 컴파일 타임 에러 get!
 
 * <code>mut</code>를 통한 가변성 변수 선언.
 
 * difference between variables and constants<br>
-&nbsp;&nbsp;&nbsp;&nbsp;1️⃣ 변수에만 <code>mut</code> 사용 ∵ 상수는 불변성 그 자체임❕️<br>
-&nbsp;&nbsp;&nbsp;&nbsp;2️⃣ 값의 유형 선언<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;변수 ➡️ <code>let</code><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;상수 ➡️ <code>const</code><br>
-&nbsp;&nbsp;&nbsp;&nbsp;3️⃣ 
+&emsp;1️⃣ 변수에만 <code>mut</code> 사용 ∵ 상수는 불변성 그 자체임❕️<br>
+&emsp;2️⃣ 값의 유형 선언: ```variable``` ➡️ <code>let</code>, ```constant``` ➡️ <code>const</code><br>
+&emsp;3️⃣ 상수의 제약 조건: 함수 호출의 결과나 실행 중에 결정되는 다른 값은 할당할 수 없음<br>
+
+* shadowing 예시
+  ```rust
+  fn main() {
+    let x = 5;
+
+    let x = x + 1;
+
+    let x = x * 2;
+
+    println!("The value of x is: {}", x);
+  }
+  ```
+  <br>
+&emsp;```let``` 키워드로 효율 ⬆️
+<br>
+* ```let```과 ```mut``` 비교<br><br>
+  ```rust
+  let spaces = "   ";
+  let spaces = spaces.len();
+  ```
+  ➡️ 공백의 개수가 출력
+  <br><br>
+  ```rust
+  let mut spaces = "   ";
+  ```
+  ```
+  error[E0308]: mismatched types
+   --> src/main.rs:3:14
+    |
+  3 |     spaces = spaces.len();
+    |              ^^^^^^^^^^^^ expected &str, found usize
+    |
+    = note: expected type `&str`
+               found type `usize`
+  ```
+  ➡️ 변수 유형 변경 불가함을 나타냄
 # 2. 데이터 타입들
 # 3. 함수 동작 원리
 # 4. 주석
