--- a/03프로그래밍개념.md
+++ b/03프로그래밍개념.md
@@ -5,7 +5,9 @@
 [3. Functions](#3-함수-동작-원리)<br>
 [4. Comments](#4-주석)<br>
 [5. Control Flow](#5-제어문)<br>
-
+<br>
+<br>
+<br>
 
 # 1. 변수와 가변성
 * 기본 변수 ➡️ immutable<br>
@@ -55,7 +57,47 @@
                found type `usize`
   ```
   ➡️ 변수 유형 변경 불가함을 나타냄
+<br>
+<br>
+<br>
+
 # 2. 데이터 타입들
+```mermaid
+graph TD
+A(데이터 타입)
+A-->B(스칼라)
+B-->D(정수형)
+B-->E(부동소수점 숫자)
+B-->F(Boolean)
+B-->G(문자)
+A-->C(컴파운드)
+C-->H(튜플)
+C-->I(배열)
+
+click D "#정수형" "정수형 노드로 이동"
+```
+<br>
+
+## 정수형
+* 소수점이 없는 숫자
+  
+* 부호: 숫자가 부호를 가져야 하는 경우<br>
+  미부호: 양수만을 가지기에 부호없이도 표현되는 경우
+  
+* Rust에서의 정수 타입
+
+<div align="center">
+
+|Length|Signed|Unsigned|
+|:------:|:---:|:---:|
+|8-bit|i8|u8|
+|16-bit|i16|u16|
+|32-bit|i32|u32|
+|64-bit|i64|u64|
+|arch|isize|usize|
+
+</div>
+
 # 3. 함수 동작 원리
 # 4. 주석
 # 5. 제어문
