--- a/03프로그래밍개념.md
+++ b/03프로그래밍개념.md
@@ -74,15 +74,15 @@ A-->C(컴파운드)
 C-->H(튜플)
 C-->I(배열)
 
-click D "#정수형" "정수형 노드로 이동"
+click E "#부동-소수점-타입"
 ```
 <br>
 
 ## 정수형
 * 소수점이 없는 숫자
   
-* 부호: 숫자가 부호를 가져야 하는 경우<br>
-  미부호: 양수만을 가지기에 부호없이도 표현되는 경우
+* 부호: 숫자가 부호를 가져야 하는 경우 / 미부호: 양수만을 가지기에 부호없이도 표현되는 경우
+  * 부호된 숫자는 [2의 보수](https://ko.wikipedia.org/wiki/2%EC%9D%98_%EB%B3%B4%EC%88%98) 형태로 저장.
   
 * Rust에서의 정수 타입
 
@@ -98,6 +98,27 @@ click D "#정수형" "정수형 노드로 이동"
 
 </div>
 
+## 부동 소수점 타입
+* 기본 타입: ```f64```
+
+* 부동 소수점 숫자 활용 예제
+
+  ```rust
+  fn main() {
+    let x = 2.0; // f64
+
+    let y: f32 = 3.0; // f32
+  }
+  ```
+  * ```f32```: 1배수의 정밀도인 부동 소수점
+  * ```f64```: 2배수의 정밀도인 부동 소수점
+
+## Boolean 타입
+* ```true```와 ```false``` 둘 중 하나의 값만 가짐
+
+* ```bool```로 명시
+
+* 조건으로 사용
 # 3. 함수 동작 원리
 # 4. 주석
 # 5. 제어문
