--- a/03프로그래밍개념.md
+++ b/03프로그래밍개념.md
@@ -5,7 +5,6 @@
 [3. Functions](#3-함수-동작-원리)<br>
 [4. Comments](#4-주석)<br>
 [5. Control Flow](#5-제어문)<br>
-[넘어가](#부동-소수점-타입)
 <br>
 <br>
 <br>
@@ -74,8 +73,6 @@ B-->G(문자)
 A-->C(컴파운드)
 C-->H(튜플)
 C-->I(배열)
-
-click E (#부동-소수점-타입) "부동 소수점 타입"
 ```
 <br>
 
@@ -120,6 +117,31 @@ click E (#부동-소수점-타입) "부동 소수점 타입"
 * ```bool```로 명시
 
 * 조건으로 사용
+
+## 문자 타입
+* ```String```은 ```""```, ```char```은 ```''```.
+
+<hr>
+
+## 튜플
+* 값들을 집합시켜 튜플화
+
+  ```rust
+  fn main() {
+   let tup: (i32, f64, u8) = (500, 6.4, 1);
+  }
+  ```
+		
+ 	```rust
+ 	fn main() {
+ 		let tup = (500, 6.4, 1);
+ 	
+ 		let (x, y, z) = tup;
+ 	
+ 		println!("The value of y is: {}", y);
+ 	}
+ 	```
+  
 # 3. 함수 동작 원리
 # 4. 주석
 # 5. 제어문
