--- a/03프로그래밍개념.md
+++ b/03프로그래밍개념.md
@@ -126,21 +126,40 @@ C-->I(배열)
 ## 튜플
 * 값들을 집합시켜 튜플화
 
-  ```rust
-  fn main() {
-   let tup: (i32, f64, u8) = (500, 6.4, 1);
-  }
-  ```
+	```rust
+	fn main() {
+		let tup: (i32, f64, u8) = (500, 6.4, 1);
+	}
+	```
 		
- 	```rust
- 	fn main() {
- 		let tup = (500, 6.4, 1);
- 	
- 		let (x, y, z) = tup;
- 	
- 		println!("The value of y is: {}", y);
- 	}
- 	```
+	```rust
+	fn main() {
+		let tup = (500, 6.4, 1);
+		
+		let (x, y, z) = tup;
+		
+		println!("The value of y is: {}", y);
+	}
+	```
+
+ * 마침표```.``` 뒤에 index 입력하여 튜플 요소 직접 접근
+
+   ```rust
+   fn main() {
+	    let x: (i32, f64, u8) = (500, 6.4, 1);
+	
+	    let five_hundred = x.0;
+	
+	    let six_point_four = x.1;
+	
+	    let one = x.2;
+	}
+	```
+
+## 배열
+* 배열의 모든 요소는 <b>같은 타입</b>이어야 함.
+
+* <i><b>panic</b></i>: index가 길이보다 길 경우 프로그래이 오류와 함께 종료.
   
 # 3. 함수 동작 원리
 # 4. 주석
