--- a/03프로그래밍개념.md
+++ b/03프로그래밍개념.md
@@ -159,8 +159,27 @@ C-->I(배열)
 ## 배열
 * 배열의 모든 요소는 <b>같은 타입</b>이어야 함.
 
-* <i><b>panic</b></i>: index가 길이보다 길 경우 프로그래이 오류와 함께 종료.
+* <i><b>panic</b></i>: index가 길이보다 길 경우 프로그램이 오류와 함께 종료됨.
   
 # 3. 함수 동작 원리
+* 매개 변수 사용
+  ```rust
+  fn main() {
+  	parameter(3, 11);
+  }
+
+  fn parameter(x: i32, y: i32) {
+  	blahblah
+  }
+  ```
+
+* 표현식 부
+  ```rust
+  {
+  	let x = 3;
+  	x + 1
+  }
+  ```
+  <br>➡️ ```x + 1```이 세미콜론으로 끝난다면❓ 구문으로 변경, 반환 값이 아니게 됨
 # 4. 주석
 # 5. 제어문
