--- a/03프로그래밍개념.md
+++ b/03프로그래밍개념.md
@@ -181,5 +181,24 @@ C-->I(배열)
   }
   ```
   <br>➡️ ```x + 1```이 세미콜론으로 끝난다면❓ 구문으로 변경, 반환 값이 아니게 됨
+
+* 반환 값을 갖는 함수
+	* 타입 ```->``` 뒤에 선언
+   	* Rust에서 반환값 == 함수 본문 마지막 표현식의 값
+   	  ```rust
+   	  fn five() -> i32 {
+   	  	5
+   	  }
+
+   	  fn main() {
+   	  	let x = five();
+
+   	  	println!("The value of x is: {}", x);
+   	  }
+   	  ```
+   	  ➡️ 오류 안 남. 제대로 되는 거임.<br><br>
+   	  ```rust
+   	  let x = 5; //얘랑 같음
+   	  ```
 # 4. 주석
-# 5. 제어문
+# 5. 제어문	
