--- a/03프로그래밍개념.md
+++ b/03프로그래밍개념.md
@@ -200,5 +200,14 @@ C-->I(배열)
    	  ```rust
    	  let x = 5; //얘랑 같음
    	  ```
+<br>
+<br>
+<br>
+
 # 4. 주석
+```rust
+fn main() {
+	println!("주석이 뭔데!") //이거
+}
+```
 # 5. 제어문	
