--- a/03프로그래밍개념.md
+++ b/03프로그래밍개념.md
@@ -210,4 +210,52 @@ fn main() {
 	println!("주석이 뭔데!") //이거
 }
 ```
-# 5. 제어문	
+<br>
+<br>
+<br>
+
+# 5. 제어문
+## if 표현식
+* 변수 선언하고, 조건의 내용을 ```{ }``` 내부에 입력하면 됨
+  
+* 명시적으로 ```boolean```을 ```if```의 조건으로 사용해야 함
+
+* else if 쓰고 싶으면 맨 처음 ```if```, 중간 ```else if```, 마지막 ```else``` 이렇게 하면 됨❕
+	* rust는 처음 조건 참이 되는 것만 실행하고 나머지는 검사 ❌
+
+* 코드 블럭은 마지막 표현식을 산출함
+
+* 숫자는 그 자체로 표현식임
+
+## 반복문과 반복
+* ```loop {반복할 내용}``` ➡️ ```ctrl```+```C``` 누르기 전까지 무한 루프
+	* 무한 루프 싫으면 ```break``` 이용
+
+* ```while 조건 {조건 참일 때 반복할 내용}```
+
+* 각 요소 순회하기
+	* ```while``` 사용
+		```rust
+		fn main() {
+			let a = [10, 20, 30, 40, 50];
+			let mut index = 0;
+		
+			while index < 5 {
+				println!("the value is: {}", a[index]);
+		
+				index = index + 1;
+			}
+		}
+  		```
+  	<br>
+   
+	* ```for``` 사용
+		```rust
+		fn main() {
+			for number in (1..4).rev() {
+				println!("{}!", number);
+			}
+  			println!("우와우와우와");
+		}
+  		```
+  		* (M..N) M에서 N까지 범위 나타내는 듯
