--- a/04소유권.md
+++ b/04소유권.md
@@ -1,12 +1,12 @@
-4th. 
+4th. Understanding Ownership
 =============
-[1. Variables and Mutability](#1-변수와-가변성)<br>
-[2. Data Types](#2-데이터-타입들)<br>
-[3. Functions](#3-함수-동작-원리)<br>
-[4. Comments](#4-주석)<br>
-[5. Control Flow](#5-제어문)<br>
+[1. what the ownership is](#1-소유권이-뭔가요)<br>
+[2. reference and borrowing](#2-참조자와-빌림)<br>
+[3. the slice type](#3-슬라이스)<br>
 <br>
 <br>
 <br>
 
-# 1. 변수와 가변성
+# 1. 소유권이 뭔가요?
+# 2. 참조자와 빌림
+# 3. 슬라이스
