--- a/04소유권.md
+++ b/04소유권.md
@@ -8,5 +8,24 @@
 <br>
 
 # 1. 소유권이 뭔가요?
+## 스택
+* <i><b>last in, first out</b></i>: 받아들인 순서대로 값을 저장 🔁 반대 방향으로 값을 지움
+
+* (데이터 추가) pushing on the stack ↔️ popping off the stack (데이터 제거)
+
+* 데이터 공간이 항상 스택의 꼭대기로 지정 ➡️ 공간 검색할 필요 없어, 빠름
+
+* 스택의 데이터는 고정된 크기를 지녀야 함
+## 힙
+* 크기 변경 가능한 데이터
+
+* allocating on the heap<br>
+  1️⃣저장 공간 확인 2️⃣OS가 빈 지점을 찾아 '사용중'으로 표시 3️⃣해당 지점의 포인터 반환
+
+* 포인터 위치 따라가야 해서 속도 느림
+## 소유권 규칙
+1. 러스트 각 값은 해당값의 owner라 불리는 변수를 가짐
+2. 한번에 하나의 오너만 존재 가능
+3. 오너가 스코프 밖으로 벗어날 때, 값이 버려짐
 # 2. 참조자와 빌림
 # 3. 슬라이스
