--- a/04소유권.md
+++ b/04소유권.md
@@ -35,10 +35,12 @@
 
 * Variables and Data Interacting with Move
   ```rust
-  let s1 = String::from("hello");
-  let s2 = s1;
-
-  println!("{}, world!", s1);
+  fn main() {
+    let s1 = String::from("hello");
+    let s2 = s1;
+  
+    println!("{}, world!", s1);
+  }
   ```
   ```rust
   $ cargo run
@@ -64,6 +66,29 @@
   error: could not compile `ownership` due to previous error
   ```
   ➡️ 에러 엔딩 ```REASON``` s1의 ownership이 s2로 move되면, s1 사용 불가.
+
+* Variables and Data Interacting with Clone
+  ```rust
+  let s1 = String::from("hello");
+  let s2 = s1.clone();
+
+  println!("s1 = {}, s2 = {}", s1, s2);
+  ```
+  ➡️ 제대로 실행됨. 힙 데이터가 <b>복사</b>됨.
+
+* Stack-Only Data: Copy
+  ```rust
+  let x = 5;
+  let y = x;
   
+  println!("x = {}, y = {}", x, y);
+  ```
+  ➡️ 주소값이 아닌 value이기 때문에 copy 가능!
+
+* Copy 가능한 타입들<br>
+  🐰u32와 같은 모든 ```정수형``` 타입들<br>
+  🐰true와 false값을 갖는 ```부울린``` 타입 bool<br>
+  🐰f64와 같은 모든 ```부동 소수점``` 타입들<br>
+  🐰```Copy가 가능한 타입만으로 구성된 튜플```들. (i32, i32)는 Copy가 되지만, (i32, String)은 ❌
 # 2. 참조자와 빌림
 # 3. 슬라이스
