--- a/04소유권.md
+++ b/04소유권.md
@@ -27,7 +27,7 @@
 ## ⭐소유권 규칙⭐
 1. 러스트 각 값은 해당값의 owner라 불리는 변수를 가짐
 2. 한번에 하나의 오너만 존재 가능
-3. 오너가 스코프 밖으로 벗어날 때, 값이 버려짐
+3. 오너가 스코프 밖으로 벗어날 때, 값은 무효화.
 
 * Variable Scope: 변수가 유효한 범위를 나타내는 거. ```{ }```
 
@@ -85,10 +85,40 @@
   ```
   ➡️ 주소값이 아닌 value이기 때문에 copy 가능!
 
-* Copy 가능한 타입들<br>
+* Copy 가능한 타입들 ➡️ 힙 메모리 사용하지 않는 것<br>
   🐰u32와 같은 모든 ```정수형``` 타입들<br>
   🐰true와 false값을 갖는 ```부울린``` 타입 bool<br>
   🐰f64와 같은 모든 ```부동 소수점``` 타입들<br>
   🐰```Copy가 가능한 타입만으로 구성된 튜플```들. (i32, i32)는 Copy가 되지만, (i32, String)은 ❌
+
+* Ownership and Function
+  ```rust
+  fn main() {
+    let s = String::from("hello");  // s가 스코프 안으로 들어왔습니다.
+
+    takes_ownership(s);             // s의 값이 함수 안으로 이동했습니다...
+                                    // ... 그리고 이제 더이상 유효하지 않습니다.
+    let x = 5;                      // x가 스코프 안으로 들어왔습니다.
+
+    makes_copy(x);                  // x가 함수 안으로 이동했습니다만,
+                                    // i32는 Copy가 되므로, x를 이후에 계속
+                                    // 사용해도 됩니다.
+
+  } // 여기서 x는 스코프 밖으로 나가고, s도 그 후 나갑니다. 하지만 s는 이미 이동되었으므로,
+    // 별다른 일이 발생하지 않습니다.
+  
+  fn takes_ownership(some_string: String) { // some_string이 스코프 안으로 들어왔습니다.
+      println!("{}", some_string);
+  } // 여기서 some_string이 스코프 밖으로 벗어났고 `drop`이 호출됩니다. 메모리는
+    // 해제되었습니다.
+  
+  fn makes_copy(some_integer: i32) { // some_integer이 스코프 안으로 들어왔습니다.
+      println!("{}", some_integer);
+  } // 여기서 some_integer가 스코프 밖으로 벗어났습니다. 별다른 일은 발생하지 않습니다.
+  ```
+<br>
+<br>
+<br>
+
 # 2. 참조자와 빌림
 # 3. 슬라이스
