--- a/04소유권.md
+++ b/04소유권.md
@@ -121,4 +121,9 @@
 <br>
 
 # 2. 참조자와 빌림
+## 참조자의 규칙
+1. 어떠한 경우든, 아래의 둘 중 하나만 가질 수 있음<br>
+   1️⃣하나의 가변 참조자 2️⃣임의 개수의 불변 참조자
+
+2. 참조자는 항상 유효해야만 함
 # 3. 슬라이스
