--- a/04소유권.md
+++ b/04소유권.md
@@ -126,4 +126,29 @@
    1️⃣하나의 가변 참조자 2️⃣임의 개수의 불변 참조자
 
 2. 참조자는 항상 유효해야만 함
+
+* 엠퍼센트(```&```) 기호 참조자 예시
+  ```rust
+  fn main() {
+    let s1 = String::from("hello");
+
+    let len = calculate_length(&s1);
+
+    println!("The length of '{}' is {}.", s1, len);
+  }
+  
+  fn calculate_length(s: &String) -> usize {
+      s.len()
+  }
+  ```
+  * 참조자가 없었으면 소유권이 넘어가서 print를 못했을 것임.
+  * 참조자가 있기 때문에, 스코프 범위 외에서도 메모리 반납 ❌
+ 
+* 가변 참조자(Mutable References)
+  * ```제한 사항``` 특정한 스코프 내에 특정한 데이터 조각에 대한 가변 참조자를 딱 하나만 만들 수 있음.<br>
+    ➡️ 데이터 레이스 방지
+    <details><summary>데이터 레이스 조건</summary>
+    1. 두 개 이상의 포인터가 동시에 같은 데이터에 접근<br>
+    2. 그 중 적어도 하나의 포인터가 데이터 사용<br>
+    3. 데이터 접근 시 동기화 메커니즘 부재</details>
 # 3. 슬라이스
