--- a/04소유권.md
+++ b/04소유권.md
@@ -121,6 +121,9 @@
 <br>
 
 # 2. 참조자와 빌림
+
+## 빌림
+함수의 파라미터로 참조자를 만드는 것
 ## 참조자의 규칙
 1. 어떠한 경우든, 아래의 둘 중 하나만 가질 수 있음<br>
    1️⃣하나의 가변 참조자 2️⃣임의 개수의 불변 참조자
@@ -151,4 +154,28 @@
     1. 두 개 이상의 포인터가 동시에 같은 데이터에 접근<br>
     2. 그 중 적어도 하나의 포인터가 데이터 사용<br>
     3. 데이터 접근 시 동기화 메커니즘 부재</details>
+
+* 새로운 스코프는 중괄호 ```{ }```로 만들 수 있음
+
+* 댕글링 참조자(Dangling References)
+  * 댕글링 포인터(dangling pointer): 메모리 영역 해제됐을 때, 여전히 해당 영역을 가리키고 있는 상황.
+  <br><br>
+  ```rust
+  fn main() {
+    let reference_to_nothing = dangle();
+  }
+  
+  fn no_dangle() -> &String {
+    let s = String::from("hello");
+
+    s //&s로 하면 에러 뜸 → 스코프 벗어나면 drop됨
+  }
+  '''
+<br>
+➡️ 에러 없음.
+<br>
+<br>
+<br>
+
+
 # 3. 슬라이스
