--- a/04소유권.md
+++ b/04소유권.md
@@ -179,3 +179,11 @@
 
 
 # 3. 슬라이스
+## 스트링 슬라이스
+```start..end 문법```: ```start```부터 시작하여 ```end``` 포함않는 연속된 범위
+* 동일한 표현
+  * ```&s[0..2]``` 와 ```&s[..2]```
+  * ```&s[3..len]``` 와 ```&s[3..]```
+  * ```&s[0..len]``` 와 ```&s[..]```
+
+* 스트링 슬라이스를 나타내는 타입 ➡️ ```&str```
