--- a/04소유권.md
+++ b/04소유권.md
@@ -187,3 +187,9 @@
   * ```&s[0..len]``` 와 ```&s[..]```
 
 * 스트링 슬라이스를 나타내는 타입 ➡️ ```&str```
+
+* an example of the string slicing as a parameter
+  ```rust
+  let word = first_word(&my_string[..]);
+  ```
+  <br>
